feat: Added logging with Slf4j and improved validation and security measure. Created new descriptive exceptions and their handling in GlobalExceptionHandler. Changed endpoints urls.